--- a/streamlit/Dockerfile
+++ b/streamlit/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /app
 # Change the working dir inside the container - cd /app
 
 COPY main.py requirements.txt ./
+COPY pages /app/pages
 # Copy main.py as source cod and req.txt as dependency
 
 RUN pip install -r requirements.txt
